card footer spacing fix

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -33,13 +33,14 @@
 }
 .flex_footer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 
 @media (max-width: 770px) {
   .flex_footer {
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
   }
 }
